# acroform-filler

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QC_APPENDIX_B.md  README.md  SECURITY.md  docker-compose.single.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  section14-qualify.yml
apps/web/: Dockerfile  package.json  playwright.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/: PdfPreview.tsx
apps/web/app/fdf-to-pdf/: page.tsx
apps/web/app/i9-fill-online/: page.tsx
apps/web/app/pdf-flatten/: page.tsx
apps/web/app/pdf-form-fill/: page.tsx
apps/web/app/w9-fill-online/: page.tsx
apps/web/app/xfdf-to-pdf/: page.tsx
apps/web/scripts/: verify_chrome_pdf_viewer.mjs  verify_pdfjs_render.mjs
apps/worker/: Dockerfile  pyproject.toml  requirements.txt
apps/worker/app/: config.py  import_parsers.py  inspect.py  jobs.py  main.py  pdf_tools.py  validate.py  xfa.py
apps/worker/scripts/: configure_hosted_urls.py  create_section14_pr.py  generate_a1_evidence.py  measure_p95.py  record_preview_evidence.py  run_acceptance.py  run_section14_local.py  section14_report.py  verify_hosted.py  verify_release_artifacts.py  verify_renderers.py
apps/worker/tests/: test_api.py  test_inspect_fixtures.py  test_pdf_tools.py  test_sample_fill_snapshots.py  test_security_logging.py  test_xfa_fixture.py
apps/worker/tests/fixtures/: sample_inspect_snapshot.json
docs/: SECTION14_RUNBOOK.md
(+3 files in other folders)
