[project]
name = "pdf-forms-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "python-multipart>=0.0.20",
  "pypdf>=5.4.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.9.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=1.4.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
